--- a/UI/static/css/store.css
+++ b/UI/static/css/store.css
@@ -143,6 +143,16 @@ h1{
     width:154px;
     float: left;
 }
+.category_card_dash_right {
+    background: #fff;
+    padding: 12px 20px;
+    border: 1px solid #ddd;
+    border-radius: 3px;
+    margin-top: 115px;
+    margin-left: 50px;
+    width:154px;
+    float: right;
+}
 
 .sold_card {
     background: #fff;
@@ -437,7 +447,33 @@ h1{
     display: none;
 }
 
+/* ---product display card---- */
+.display-product {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    margin: auto;
+    text-align: center;
+    font-family: arial;
+}
+.display-product button {
+    border: none;
+    outline: 0;
+    padding: 12px;
+    color: white;
+    background-color: indianred;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+  }
+  .display-product button:hover {
+    opacity: 0.7;
+  }
 
+.price {
+    color: grey;
+    font-size: 22px;
+}
 
 /* ---- footer layout ----   */
 footer{
