--- a/UI/static/css/store.css
+++ b/UI/static/css/store.css
@@ -161,7 +161,7 @@ h1{
     border-radius: 3px;
     margin-right: 15px;
     margin-top: 100px;
-    width:15%;
+    width:23%;
     float: right;
 }
 
@@ -308,7 +308,7 @@ h1{
     transition: 0.5s;
 }
  .center input{
-     width: 40px;
+     width: 46px;
      border: none;
      padding: 5px 3px;
      background: hsla(0, 20%, 98%, 0);
@@ -375,6 +375,7 @@ h1{
     margin-top: 10px;
     margin-left: 40px;
 }
+
 #table_dash{
     float: right;
     margin-top: 10px;
@@ -484,4 +485,34 @@ footer{
     padding-top:27px;
     padding-bottom:30px;
     background:#fbf9f966;
+}
+
+#tblCart{
+    border-collapse: collapse;
+    margin-bottom: 30px;
+}
+#tblCart th{
+    text-align: left;
+    padding: 0px 5px 0px 5px;
+    color: #fff;
+    font-size: 12px;
+    background-color: #27AD60;
+}
+#tblCart td{
+    /* border: 1px solid #e3e3e3; */
+    padding: 6px 4px;
+    color: #0a0a0a;
+    font-size: 12px;
+}
+
+#alert{
+    width: 60%;
+    margin-left:20%;
+    text-align: center;
+    padding: 3px;
+    border: 2px solid #27AD60;
+    background-color: rgb(239, 255, 185);
+    color: rgb(60, 90, 1);
+    font-size:12px;
+    font-weight:bold"
 }
